feat: add unified Notification Center with delivery worker and outbox
Introduces a domain model for notifications (event code, category, priority,
action routing/metadata, idempotency) backed by a durable recipient snapshot
(UserNotification) and a PostgreSQL-backed delivery outbox (NotificationDelivery)
processed by a scheduled worker using FOR UPDATE SKIP LOCKED claiming, lease-based
recovery, and a retry/backoff policy. Business flows (leave, attendance reminders,
fee reminders, notices, events, holidays, payments) publish through a single
NotificationPublisher/BusinessNotificationService entry point instead of calling
FcmService/EmailService directly, with parent-permission-aware recipient
resolution and per-child action metadata.

Also fixes two issues found during live acceptance testing:
- Notification migrations were numbered behind already-applied ones (out of
  order); renumbered the two never-applied migrations to V48/V49 and left the
  already-applied one as V41.
- Notification's entity-level defaults masked event-code/category derivation
  from type, so every notice published via the admin notice endpoint was
  silently saved as LEGACY_NOTIFICATION/SYSTEM_ADMIN instead of its real
  category, breaking category-filtered inbox views.

Removes RESULT_PUBLISHED and PARENT_ACCESS_CHANGED event codes: neither had a
call site. There is no separate result-publication boundary in Edunexify
(REPORT_CARD_READY is the only publish action in the academics domain), and
parent account/security changes already go through PasswordResetService's
specialized onboarding/reset flows by design. Also removes two vestigial,
already-unused EmailService injections left over from the reminder services'
migration to BusinessNotificationService.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>